Fix missing padding on theme select

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -71,7 +71,6 @@ nav a:hover {
 }
 
 #theme-switch select {
-    padding: 0;
     border: none;
     border-radius: 0 0.33rem 0.33rem 0;
 
